--- a/.gitignore
+++ b/.gitignore
@@ -1,46 +1,1 @@
-# Prerequisites
-*.d
-
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
-
-# clangd cache
-.cache
-
-# Compiled shader programs
-*.spv
-
-# repo-specific stuff
-build/*
-cs237-library/include/cs237-config.h
-
-# macOS
-.DS_Store
-
+/target
